--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 	<!--end::Global Theme Styles-->
 	<!--begin::Layout Themes(used by all pages)-->
 	<!--end::Layout Themes-->
-	<link rel="shortcut icon" href="media/logos/Gobierno.png" />
+	<link rel="shortcut icon" href="Gobierno.png" />
 </head>
 <!--end::Head-->
 <!--begin::Body-->
 
-<body id="kt_body" style="background-image: url(media/logos/body.jpg);background-size:cover;background-repeat:no-repeat"
+<body id="kt_body" style="background-image: url(body.jpg);background-size:cover;background-repeat:no-repeat"
 	class="quick-panel-right demo-panel-right offcanvas-right header-fixed subheader-enabled page-loading">
 	<!--begin::Main-->
 	<!--begin::Header Mobile-->
 	<div id="kt_header_mobile" class="header-mobile">
 		<!--begin::Logo-->
 		<a href="Inventario.aspx">
-			<%--<img alt="Logo" src="media/logos/moddle2.png" class="logo-default max-h-30px" />--%>
+			<%--<img alt="Logo" src="moddle2.png" class="logo-default max-h-30px" />--%>
 			<div style="font-weight:bold;color:black;margin-top:5px;font-size:16px">Campus</div>
 		</a>
 		<!--end::Logo-->
@@ -578,14 +578,14 @@
 						<!--end::Container-->
 					</div>
 					<div align="center">
-						<img src="media/logos/logot.png" height="80px" />
+						<img src="logot.png" height="80px" />
 					</div>
 					<!--end::Entry-->
 				</div>
 				<!--end::Content-->
 				<!--begin::Footer-->
 				<div class="footer bg-white py-4 d-flex flex-lg-column" id="kt_footer"
-					style="background-image: url(media/logos/body.jpg);background-size:cover;background-repeat:no-repeat">
+					style="background-image: url(body.jpg);background-size:cover;background-repeat:no-repeat">
 					<!--begin::Container-->
 					<div class="container " align="center">
 						<!--begin::Copyright-->
@@ -595,7 +595,7 @@
 							</span><br />
 							<%--<a style="color:black;font-weight:bold; font-size:14px">MINISTERIO DE COORDINACION,
 								SECRETARIA GENERAL DE LA GOBERNACION</a>--%>
-								<img src="media/logos/footer.jpg" class="img-fluid" />
+								<img src="footer.jpg" class="img-fluid" />
 						</div>
 						<!--end::Copyright-->
 					</div>
